--- a/.github/workflows/terraform-apply hcloud.yml
+++ b/.github/workflows/terraform-apply hcloud.yml
@@ -164,7 +164,7 @@ jobs:
     environment: prod # requires manual approval before running
     timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
     needs:
-      - terraform-review-hcloud
+      - terraform-plan-hcloud
 
     runs-on: ubuntu-latest
 
