--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.loadbalancer.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.loadbalancer.yml
@@ -7,11 +7,13 @@ users:
     lock_passwd: true
 
 write_files:
-  - path: /root/scripts/nat_gw_egresss_setup.sh
+  ### TEMPORARY HTTP/HTTPS INTERNET ACCESS ###
+  - path: /root/scripts/nat_gw_ephemeral_public_egress.sh
     encoding: b64
-    content: ${nat_gw_egresss_setup_b64}
+    content: ${nat_gw_ephemeral_public_egress_b64}
     permissions: "0755"
 
+  ### INSTALL PODMAN & DOCKER COMPOSE V2 ###
   - path: /root/scripts/install-podman-docker-compose-fedora.sh
     encoding: b64
     content: ${install_podman_docker-compose_b64}
@@ -22,12 +24,12 @@ runcmd:
   - export logfile="/root/cloud-config.log"
   - echo "Hello from cloud-config.loadbalancer.yml!" > $logfile
   - date >> $logfile
-  ########################### TEMPORARY HTTPS INTERNET ACCESS ###########################
+  ########################### TEMPORARY HTTP/HTTPS INTERNET ACCESS ###########################
   # wait for nat gateway to initialize
   - printf "\n# Sleeping to wait for NAT-Gateway cloud-init\n" >> $logfile
   - sleep 600 # 10 minutes
   - printf "\n# Running NAT Gateway setup script\n" >> $logfile
-  - /root/scripts/nat_gw_egresss_setup.sh ${PRIVATE_IP_TO_NAT} >> $logfile 2>&1
+  - /root/scripts/nat_gw_ephemeral_public_egress.sh ${PRIVATE_IP_TO_NAT} >> $logfile 2>&1
   ######################################################################################
   # Install podman and docker-compose v2 plugin
   - printf "\n# Installing podman and docker compose v2 plugin\n" >> $logfile
