--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.demo-instance.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.demo-instance.yml
@@ -12,6 +12,7 @@ write_files:
     content: |
       #!/usr/bin/env bash
 
+      nm-online -q --timeout=30 # wait for NetworkManager
       if ! ip route show default | grep -q "via ${VIRTUAL_NETWORK_GATEWAY}"; then
           ip route add default via ${VIRTUAL_NETWORK_GATEWAY}
       fi
@@ -51,28 +52,25 @@ runcmd:
   ########################### TEMPORARY HTTP/HTTPS INTERNET ACCESS ###########################
   # wait for nat gateway to initialize
   - printf "\n# Sleeping to wait for NAT-Gateway cloud-init\n" >> $logfile
-  - sleep 600 # 10 minutes
+  # - sleep 600 # 10 minutes # TODO enable
   # add temporary internet access, equivalent command to above setup for persistent access
   - echo "# Adding temporary internet access for nftables installation..." >> $logfile
-  # - nm-online -q --timeout=30 # check if NetworkManager is online
-  # - ip route add default via ${VIRTUAL_NETWORK_GATEWAY}
-  # - ip route flush cache
-  # - sudo systemctl restart systemd-resolved
-  # - sudo systemctl restart NetworkManager
-
-  # # Lockdown private network interface access to minimal required config
-  # - |
-  #   /root/scripts/nftables_lockdown_private_instances.sh \
-  #     ${LOADBALANCER_PRIVATE_IP} \
-  #     ${BASTION_HOST_PRIVATE_IP} \
-  #     ${NAT_GATEWAY_PRIVATE_IP} \
-  #     ${TARGET_INSTANCE_PRIVATE_IP} \
-  #     >> $logfile 2>&1
-  # # Install podman and docker-compose v2 plugin
-  # - printf "\n# Installing podman and docker compose v2 plugin\n" >> $logfile
-  # - /root/scripts/install-podman-docker-compose-fedora.sh >> $logfile 2>&1
-  # ######################################################################################
-  # # reboots server for persistent network config to take effect
-  # - printf "\n# Rebooting server...\n" >> $logfile
-  # - date >> $logfile
-  # - reboot
+  - sudo /etc/NetworkManager/dispatcher.d/ifup-local
+  - ip route flush cache
+  - sudo systemctl restart systemd-resolved
+  # Lockdown private network interface access to minimal required config
+  - |
+    /root/scripts/nftables_lockdown_private_instances.sh \
+      ${LOADBALANCER_PRIVATE_IP} \
+      ${BASTION_HOST_PRIVATE_IP} \
+      ${NAT_GATEWAY_PRIVATE_IP} \
+      ${VIRTUAL_NETWORK_GATEWAY} \
+      >> $logfile 2>&1
+  # Install podman and docker-compose v2 plugin
+  - printf "\n# Installing podman and docker compose v2 plugin\n" >> $logfile
+  - /root/scripts/install-podman-docker-compose-fedora.sh >> $logfile 2>&1
+  ######################################################################################
+  # reboots server for persistent network config to take effect
+  - printf "\n# Rebooting server...\n" >> $logfile
+  - date >> $logfile
+  - reboot
