--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.production-instances.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.production-instances.yml
@@ -49,6 +49,26 @@ runcmd:
   # list systemd DNS Config
   - printf "\n# systemd DNS config is:\n" >> $logfile
   - cat /etc/systemd/resolved.conf >> $logfile
+  ########################### TEMPORARY HTTP/HTTPS INTERNET ACCESS ###########################
+  # wait for nat gateway to initialize
+  - printf "\n# Sleeping to wait for NAT-Gateway cloud-init\n" >> $logfile
+  - sleep 600 # 10 minutes
+  # add temporary internet access, equivalent command to above setup for persistent access
+  - echo "# Adding temporary internet access for nftables installation..." >> $logfile
+  - sudo /etc/NetworkManager/dispatcher.d/ifup-local
+  - ip route flush cache
+  - sudo systemctl restart systemd-resolved
+  # Lockdown private network interface access to minimal required config
+  - |
+    /root/scripts/nftables_lockdown_private_instances.sh \
+      ${LOADBALANCER_PRIVATE_IP} \
+      ${BASTION_HOST_PRIVATE_IP} \
+      ${NAT_GATEWAY_PRIVATE_IP} \
+      ${VIRTUAL_NETWORK_GATEWAY} \
+      >> $logfile 2>&1
+  # Install podman and docker-compose v2 plugin
+  - printf "\n# Installing podman and docker compose v2 plugin\n" >> $logfile
+  - /root/scripts/install-podman-docker-compose-fedora.sh >> $logfile 2>&1
   # reboots server for network config to take effect
   - printf "\n# Rebooting server...\n" >> $logfile
   - date >> $logfile
