--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.bastion-host.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.bastion-host.yml
@@ -26,7 +26,7 @@ runcmd:
   - /root/scripts/nat_gw_ephemeral_public_egress.sh ${PRIVATE_IP_TO_NAT} >> $logfile 2>&1
   ######################################################################################
   # Configure Fail2Ban to protect sshd
-  - dnf install fail2ban -y
+  - sudo dnf install fail2ban -y --quiet
   - |
     printf "[sshd]\nenabled = true" > /etc/fail2ban/jail.local
     systemctl enable --now fail2ban
@@ -34,6 +34,11 @@ runcmd:
     cat /etc/fail2ban/jail.local >> $logfile
     printf "\n# systemctl status of fail2ban:\n" >> $logfile
     systemctl is-active fail2ban >> $logfile 2>&1
+  # install dig, netcat and nmap for security evaluation of firewall rules
+  - sudo dnf install nmap-ncat dig -y --quiet
+  - echo "Installed [nmap] port scanner version:$(nmap --version)." >> $logfile
+  - echo "Installed [nc] port scanner version:$(nc --version)." >> $logfile
+  - echo "Installed [dig] dns resolver version:$(dig -v)." >> $logfile
   # reboots server for network config to take effect
   - printf "\n# Rebooting server...\n" >> $logfile
   - date >> $logfile
