--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.loadbalancer.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.loadbalancer.yml
@@ -34,6 +34,11 @@ runcmd:
   # Install podman and docker-compose v2 plugin
   - printf "\n# Installing podman and docker compose v2 plugin\n" >> $logfile
   - /root/scripts/install-podman-docker-compose-fedora.sh >> $logfile 2>&1
+  # install dig, netcat and nmap for security evaluation of firewall rules
+  - sudo dnf install nmap-ncat dig -y --quiet
+  - echo "Installed [nmap] port scanner version:$(nmap --version)." >> $logfile
+  - echo "Installed [nc] port scanner version:$(nc --version)." >> $logfile
+  - echo "Installed [dig] dns resolver version:$(dig -v)." >> $logfile
   # Allow unpriviledged user running the HAProxy docker container to bind to ports below 1024
   - echo "net.ipv4.ip_unprivileged_port_start=80" | sudo tee /etc/sysctl.d/nonroot_can_bind_to_low_ports.conf
   - sudo sysctl --system >> $logfile 2>&1
