--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.loadbalancer.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.loadbalancer.yml
@@ -19,6 +19,18 @@ write_files:
     content: ${install_podman_docker-compose_b64}
     permissions: "0755"
 
+  ### INSTALL NETWORK HARDENING TOOLS ###
+  - path: /root/scripts/install-network-hardening-tools.sh
+    encoding: b64
+    content: ${install_network_hardening_tools_b64}
+    permissions: "0755"
+
+  ### Adds nftables installation and configuration to lockdown private IPv4 access ###
+  - path: /root/scripts/nftables_lockdown_loadbalancer.sh
+    encoding: b64
+    content: ${nftables_lockdown_loadbalancer_b64}
+    permissions: "0755"
+
 runcmd:
   # Initialize logfile
   - export logfile="/root/cloud-config.log"
@@ -30,17 +42,22 @@ runcmd:
   - sleep 600 # 10 minutes
   - printf "\n# Running NAT Gateway setup script\n" >> $logfile
   - /root/scripts/nat_gw_ephemeral_public_egress.sh ${PRIVATE_IP_TO_NAT} >> $logfile 2>&1
-  ######################################################################################
   # Install podman and docker-compose v2 plugin
   - printf "\n# Installing podman and docker compose v2 plugin\n" >> $logfile
   - /root/scripts/install-podman-docker-compose-fedora.sh >> $logfile 2>&1
-  # install dig, netcat and nmap for security evaluation of firewall rules
-  - sudo dnf install nmap-ncat dig -y --quiet
-  - echo "Installed [nmap] port scanner version:$(nmap --version)." >> $logfile
-  - echo "Installed [nc] port scanner version:$(nc --version)." >> $logfile
-  - echo "Installed [dig] dns resolver version:$(dig -v)." >> $logfile
   # Allow unpriviledged user running the HAProxy docker container to bind to ports below 1024
   - echo "net.ipv4.ip_unprivileged_port_start=80" | sudo tee /etc/sysctl.d/nonroot_can_bind_to_low_ports.conf
   - sudo sysctl --system >> $logfile 2>&1
   - printf "\nVerifying sysctl config file content:\n" >> $logfile
   - sudo cat /etc/sysctl.d/nonroot_can_bind_to_low_ports.conf >> $logfile 2>&1
+  # install network hardening tools for security evaluation of firewall rules
+  - /root/scripts/install-network-hardening-tools.sh $logfile
+  # Lockdown private network interface access to minimal required config
+  - |
+    /root/scripts/nftables_lockdown_loadbalancer.sh \
+      ${BASTION_HOST_PRIVATE_IP} \
+      >> $logfile 2>&1
+  # reboots server for network config to take effect
+  - printf "\n# Rebooting server...\n" >> $logfile
+  - date >> $logfile
+  - reboot
