--- a/terraform/hetzner-cloud/config/network.private.ips.yml
+++ b/terraform/hetzner-cloud/config/network.private.ips.yml
@@ -4,31 +4,33 @@ networks:
     cidr: "172.20.0.0/23"
     subnets:
       isolated: "172.20.0.0/30"
-      exposed: "172.20.1.0/29"
+      exposed:  "172.20.1.0/29"
   production:
     cidr: "172.24.0.0/23"
     subnets:
       isolated: "172.24.0.0/28"
-      exposed: "172.24.1.0/29"
+      exposed:  "172.24.1.0/29"
 
 # Specific Private IP Addresses
 ips:
   # Hetzner provisioned virtual network gateways
   gateways:
-    demo: "172.20.0.1"
-    production: "172.24.0.1"
-  private_instances: # Strictly private instances
-    demo: "172.20.0.2"
-    monitoring: "172.24.0.2"
-    frontend: "172.24.0.3"
-    backend: "172.24.0.4"
-  exposed_instances: # Instances with public IP
+    demo:         "172.20.0.1"
+    production:   "172.24.0.1"
+  # Strictly private instances
+  private_instances:
+    demo:         "172.20.0.2"
+    monitoring:   "172.24.0.2"
+    frontend:     "172.24.0.3"
+    backend:      "172.24.0.4"
+  # Instances with public IP
+  exposed_instances:
     bastion_host:
-      demo: "172.20.1.2"
+      demo:       "172.20.1.2"
       production: "172.24.1.2"
     loadbalancer:
-      demo: "172.20.1.3"
+      demo:       "172.20.1.3"
       production: "172.24.1.3"
     nat_gateway:
-      demo: "172.20.1.4"
+      demo:       "172.20.1.4"
       production: "172.24.1.4"
