Adds missing SCM checkout to pipeline

--- a/.github/workflows/security-evaluation-hcloud.yml
+++ b/.github/workflows/security-evaluation-hcloud.yml
@@ -23,6 +23,9 @@ jobs:
 
     steps:
 
+    - name: Checkout SCM
+      uses: actions/checkout@v5
+
     - name: Configure AWS Credentials with OIDC JWT Token for STS Access to Hcloud Backend Role
       uses: aws-actions/configure-aws-credentials@v5.1.0
       with:
