--- a/.github/workflows/security-evaluation-hcloud.yml
+++ b/.github/workflows/security-evaluation-hcloud.yml
@@ -12,8 +12,8 @@ on:
 
 jobs:
   security-evaluate-hcloud:
-    environment: prod # requires manual approval before running, as it requires hcloud servers to be up and running
-    timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
+    # environment: prod # requires manual approval before running, as it requires hcloud servers to be up and running
+    # timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
     runs-on: ubuntu-latest
 
     permissions:
@@ -159,6 +159,7 @@ jobs:
         ' $NETWORK_YML | tr '\n' ' ')
 
         echo "Generated Targets: $TARGETS"
+        ssh loadbalancer "echo $TARGETS > targets"
 
         ssh loadbalancer "mkdir -p $REMOTE_DIR"
         scp ${SCRIPT_PATH}${SCRIPT_NAME} loadbalancer:$REMOTE_DIR
