--- a/.github/workflows/security-evaluation-hcloud.yml
+++ b/.github/workflows/security-evaluation-hcloud.yml
@@ -164,6 +164,6 @@ jobs:
         ssh loadbalancer "mkdir -p $REMOTE_DIR"
         scp ${SCRIPT_PATH}${SCRIPT_NAME} loadbalancer:$REMOTE_DIR
         ssh loadbalancer "chmod u+x ${REMOTE_DIR}${SCRIPT_NAME}"
-        REMOTE_COMMAND="${REMOTE_DIR}${SCRIPT_NAME} \"$(cat ${REMOTE_DIR}targets)\" > $REMOTE_LOG 2>&1"
+        REMOTE_COMMAND="${REMOTE_DIR}${SCRIPT_NAME} $(cat ${REMOTE_DIR}targets) > $REMOTE_LOG 2>&1"
         ssh loadbalancer "$REMOTE_COMMAND"
         ssh loadbalancer "cat $REMOTE_LOG"
