--- a/.github/workflows/security-evaluation-hcloud.yml
+++ b/.github/workflows/security-evaluation-hcloud.yml
@@ -143,20 +143,25 @@ jobs:
 
         chmod 600 ~/.ssh/config
 
+    - name: Generating Private IPV4 Targets for Port Scanning
+      env:
+        NETWORK_CONFIG: terraform/hetzner-cloud/config/network.private.ips.yml
+      run: |
+        echo "Parsing Network addresses..."
+        PRIVATE_NETWORK_TARGETS=$(yq '
+          .ips.gateways | to_entries | .[] | "virtual_network_gateway_" + .key + "_net:" + .value,
+          .ips.private_instances | to_entries | .[] | "fiscalismia_" + .key + "_private_ipv4:" + .value,
+          (.ips.exposed_instances | to_entries | .[] | .key as $parent | .value | to_entries | .[] | "fiscalismia_" + $parent + "_private_ipv4_" + .key + "_net:" + .value)
+        ' $NETWORK_CONFIG | tr '\n' ' ')
+        echo "TARGETS=$PRIVATE_NETWORK_TARGETS" >> $GITHUB_ENV
+
     - name: Security Evaluation of Loadbalancer
       env:
         SCRIPT_NAME: evaluate_loadbalancer_egress.sh
         SCRIPT_PATH: security/hcloud/
-        NETWORK_YML: terraform/hetzner-cloud/config/network.private.ips.yml
         REMOTE_DIR: /root/security/
         REMOTE_LOG: /root/security_evaluation.log
       run: |
-        echo "Parsing Network addresses..."
-        TARGETS=$(yq '
-          .ips.gateways | to_entries | .[] | "virtual_network_gateway_" + .key + "_net:" + .value,
-          .ips.private_instances | to_entries | .[] | "fiscalismia_" + .key + "_private_ipv4:" + .value,
-          (.ips.exposed_instances | to_entries | .[] | .key as $parent | .value | to_entries | .[] | "fiscalismia_" + $parent + "_private_ipv4_" + .key + "_net:" + .value)
-        ' $NETWORK_YML | tr '\n' ' ')
 
         ssh loadbalancer "mkdir -p $REMOTE_DIR"
         ssh loadbalancer "echo $TARGETS > ${REMOTE_DIR}targets"
